compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__invalid_pattern_label_shorthand.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1531
expression: "\npub fn main() {\n  let Wibble(:) = todo\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let Wibble(:) = todo
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:14
  │
3 │   let Wibble(:) = todo
  │              ^ I was not expecting this

Found `:`, expected one of: 
- `)`
